@@ -49,6 +49,7 @@
 * Upgrade commons-beanutils library to version 1.9.3
 * Fix bug in RQL queries over in-memory lists where not having a sign on the sort parameter would cause the query to fail
 * Fix bug in RQL queries where empty IN clause would fail on MySQL
+* Fix bug introduced in 3.6.0-beta.1 where the JavaScript POINTS global variable was an ever-growing list of strings added to at each run of the script
 
 *Version 3.5.4*
 * Bugfix: Convert dataPointTags, installedModules, and fileStores tables in database conversions
